--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ToDOs</title>
+	<title>ToDos</title>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
-
+	<div class="container">
+		<div class="row">
+			<aside class="col-xs-12 col-md-6">
+				<h1 class="text-center">Todos</h1>
+				<div class="form-group">
+					<input id="todo" type="text" name="todo" class="form-control" placeholder="Add todo" />
+				</div>
+				<div class="form-group">
+					<button id="allRead" class="btn btn-success">Mark all as done</button>
+				</div>
+				<ul id="todolist" class="list-group checkbox">
+				</ul>
+				<p id="itemsLeft"></p>
+			</aside>
+			<aside class="col-xs-12 col-md-6">
+				<h1 class="text-center">Already Done</h1>
+				<ul id="donelist" class="list-group">
+				</ul>
+			</aside>
+		</div>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="/static/js/scripts.js"></script>
