--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			</aside>
 		</div>
 	</div>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="/static/js/scripts.js"></script>
