--- a/index.html
+++ b/index.html
@@ -10,23 +10,39 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<aside class="col-xs-12 col-md-6">
-				<h1 class="text-center">Todos</h1>
+			<div id="form" class="col-md-6 col-md-offset-3">
+				<h3>Login</h3>
 				<div class="form-group">
-					<input id="todo" type="text" name="todo" class="form-control" placeholder="Add todo" />
+					<label for="email">Email</label>
+					<input id="email" type="email" name="email" class="form-control" />
 				</div>
 				<div class="form-group">
-					<button id="allRead" class="btn btn-success">Mark all as done</button>
+					<label for="pass">Password</label>
+					<input id="pass" type="password" name="pass" class="form-control" />
 				</div>
-				<ul id="todolist" class="list-group checkbox">
-				</ul>
-				<p id="itemsLeft"></p>
-			</aside>
-			<aside class="col-xs-12 col-md-6">
-				<h1 class="text-center">Already Done</h1>
-				<ul id="donelist" class="list-group">
-				</ul>
-			</aside>
+				<div class="form-group">
+					<button id="login" class="btn btn-success">Login</button>
+				</div>
+			</div>
+			<div id="lists" class="col-md-12 hidden">
+				<aside class="col-xs-12 col-md-6">
+					<h1 class="text-center">Todos</h1>
+					<div class="form-group">
+						<input id="todo" type="text" name="todo" class="form-control" placeholder="Add todo" />
+					</div>
+					<div class="form-group">
+						<button id="allRead" class="btn btn-success">Mark all as done</button>
+					</div>
+					<ul id="todolist" class="list-group checkbox">
+					</ul>
+					<p id="itemsLeft"></p>
+				</aside>
+				<aside class="col-xs-12 col-md-6">
+					<h1 class="text-center">Already Done</h1>
+					<ul id="donelist" class="list-group">
+					</ul>
+				</aside>
+			</div>
 		</div>
 	</div>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
